Uodate package.json

--- a/package.json
+++ b/package.json
@@ -14,5 +14,6 @@
   "license": "MIT",
   "dependencies": {
     "resolve-path": "^1.4.0"
-  }
+  },
+  "publishConfig": { "registry": "https://npm.pkg.github.com/" }
 }
